<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>dd_robot</name>
  <version>0.0.0</version>
  <description>Simple Different Drive Robot which runs with altered cyclic commands to move around. Built with ROS2</description>
  <maintainer email="parthanvelanjeri@hotmail.com">Parthan M</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>python3</exec_depend>
  <exec_depend>cmd_vel_publisher</exec_depend>
</package>
